docs: add documentation for List tags
