# handler/listTags.go
@@ -7,6 +7,16 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1
+
+// @Summary List Tags
+// @Description List all tags
+// @Tags Tags
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListTagsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /tags [get]
 func ListTagsHandler(ctx *gin.Context) {
 	tags := []schemas.Tag{}
 
